--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </head>
     <body>
         <div class="page_container">
-            <section class="login_container">
+            <section class="login_container" id="login">
                 <div class="login_block">
                     <h1 class="login_title">Login Page</h1>
                     <p class="login_par">
@@ -43,6 +43,197 @@
                         <a href="https://michaelyurachek.com"><img class="login_button" src="/library/image/favicon/FAVICON.png"></a>
                         <a href="https://builtbymichael.io"><img class="login_button" src="/library/image/favicon/moon.png"></a>
                     </div>
+                </div>
+            </section>
+            <section class="section_container" id="hsaunders">
+                <div class="section_banner">
+                    <h1 class="section_title">Haley Saunders</h1>
+                    <hr>
+                    <h2 class="section_subtitle">A little thanks to you!</h2>
+                    <p class="section_par">
+                        It has been an amazing 4 years of swim. 
+                        You have really helped me get through these years by helping me grow.
+                        Swimming was always my favorite sport and you made it so much better with your amazing coaching skills.
+                        You truly helped me as a person and constructed my inner love for swim. 
+                    </p>
+                    <p class="section_par">
+                        If I could go back in time, I would want to revist my 10th grade year because it was the best year of swim.
+                        That year was my best yet and enjoyed swim so much. 
+                        I had gotten to regionals that year and worked super hard to get there but it was because of you.
+                        You made me want to push myself to my limits and helped me get through the tough times.
+                    </p>
+                    <h2 class="section_subtitle">What you have taught me</h2>
+                    <p class="section_par">
+                        In these past 5 years you have really helped me learn more about being a better person.
+                        Its hard sometiems to be positive when life is kicking your butt, but you always helped me get by that.
+                        Throughout the years it was hard to be expressive and want to interact with others but with your outgoing personality you helped me get out there.
+                    </p>
+                    <p class="section_par">
+                        Now I know that law studies is a simple class about street law and thats fine, but you made me want to learn more even outside of school.
+                        I loved making debates with people and arguing my points and law studies helped me understand it just that much more.
+                        I know we never got deep into some law topics, but majority of the simple topics really expanded my way of thinking to a different level.
+                        You teach the class so well and I hope you keep doing this for the upcoming classes.
+                    </p>
+                    <h2 class="section_subtitle">Keep being you!</h2>
+                    <p class="section_par">
+                        Ms Saunders you have been an amazing person in my life and helped me so much.
+                        I know some days are difficult and we all live through it, but you made my day so much better everytime I had class or swim practice.
+                        You make school fun and what a classroom should be; interactive, fun, expressive, and meaningful.
+                    </p>
+                    <p class="section_par">
+                        Please keep doing the things you do Ms Saunders because you are an amazing teacher and coach.
+                        Even when times get hard, just keep being you because you are such an inspiration! :)
+                    </p>
+                    <h3 class="section_signature">- Michael Yurachek</h3>
+                </div>
+            </section>
+            <section class="section_container" id="tcummings">
+                <div class="section_banner">
+                    <h1 class="section_title">Tom Cummings</h1>
+                    <hr>
+                    <h2 class="section_subtitle">A little thanks to you!</h2>
+                    <p class="section_par">
+                        With the 2 years I had with you I truly learned a lot.
+                        Computers was something I always loved and your 2 classes made it that much better.
+                        Programming was a passion of mine for so long but I was to scared to get into coding.
+                        Well now I am getting into making multiple sites per month and enjoying every bit of it.
+                    </p>
+                    <p class="section_par">
+                        After the 2 years I had with you, I have been practicing my web development skills so I can master the 3 skills.
+                        So far I would say I am pretty good at HTML and CSS.
+                        Javascript is still in the process of learning because I have one project that I think will help master it.
+                        But overall I have become really fluent in HTML and CSS because of the amount of practice I have done over these past 2 years.
+                        Thanks to you, you have made coding easier for me because of the programs you provided and the lessons you have taught me.
+                    </p>
+                    <p class="section_par">
+                        Coding was never fun in my eyes and was super scary.
+                        The main reason being learning the different syntaxes and having to understand what each line of code meant.
+                        To this day it is still difficult to understand and sometimes to need research or even AI some code, but at the end of the day I learn something new.
+                        I have so far programmed over 50,000 lines of code and made multiple different projects.
+                        Some arent public but you can find all my projects on my GitHub.
+                        I hope that you can use this as an inspiration for your future students to show that coding isn't that hard to learn on your own.
+                    </p>
+                    <p class="section_par">
+                        If you do present my projects to your future classes, please use my portfolio, prison project, and my upcoming calculator.
+                        All of those can teach students the importance of doing small projects and having to understand one thing before learning another.
+                        I first wanted to make my portofolio and then proceeded to making a biography site with my final project being an advanced calculator.
+                    </p>
+                    <h2 class="section_subtitle">What you have taught me</h2>
+                    <p class="section_par">
+                        The first time I took your class I was honestly shocked.
+                        You were such an outgoing person and really presented yourself fast.
+                        If anything you were more then just a teacher, but mainly a friend.
+                        You have taught me so many life lessons just from you preaching your mind. 
+                    </p>
+                    <p class="section_par">
+                        At first it was a bit of a shocker to how open you were about talking about certain topics, but at the end of the day I enjoyed talking about things with you.
+                        You made me become a more socialable person when it came to talking about open ended questions.
+                        Also it really helped knowing that I could have someone to talk to without the worry of getting a teacher response, but instead a real response.
+                    </p>
+                    <p class="section_par">
+                        Also you have helped me and taught me about the importance of working hard on something.
+                        Coding is a very independent thing most of the time and getting the inspiration to do it really helped from you.
+                        Java was probably the hardest thing yet because that entire year I was kind of on my own, but it taught me a lot.
+                        Mainly all the projects im doing now remind me of when I was coding in Java because I have been on my own the entire time.
+                        It was not easy, but I got through it.
+                    </p>
+                    <h2 class="section_subtitle">Keep being you!</h2>
+                    <p class="section_par">
+                        Its hard to find a teacher in our school that is similar to you.
+                        You made learning fun and also very informational.
+                        I truly learned a lot from you because of how open you are to discussion and interactive with you answer.
+                        Some teachers don't have that type of ability, but you honestly do it best.
+                    </p>
+                    <p class="section_par">
+                        To all the fun conversations and tough life lessons, you have been really helpful to my goals and mindset for the upcoming years.
+                        You were truly the best teacher ever and couldn't of had a better computer teacher!
+                        <br>
+                        <br>
+                        Also thanks for my award in 10th grade :)
+                    </p>
+                    <h3 class="section_signature">- Michael Yurachek</h3>
+                </div>
+            </section>
+            <section class="section_container" id="jbuckmaster">
+                <div class="section_banner">
+                    <h1 class="section_title">Jarad Buckmaster</h1>
+                    <hr>
+                    <h2 class="section_subtitle">A little thanks to you!</h2>
+                    <p class="section_par">
+                        Bucky you have to be one of the best teachers I have had for my high school years.
+                        Even though I only took 1 year of your class, I truly learned a lot from you.
+                        I really enjoyed the conversations we had and open ended topics that we discussed.
+                        If someone could take me back in time to take a class again, it would be yours 100% of the time.
+                    </p>
+                    <p class="section_par">
+                        Data science really taught me a lot and expanded my skills on researching, data logging, and presenting data.
+                        The projects we did were truly amazing and hope I can one day give you my own personal project like I did.
+                        Unfortunately the website I made for your class is not working, but I still have the file for it.
+                        But in the summer I plan to do another project like that on my own so you can use it maybe for next years class or even for stats.
+                    </p>
+                    <p class="section_par">
+                        But overall I really appreciate your time and the lessons to taught me with the class.
+                        You really made school fun for me and made me enjoy your class so much.
+                    </p>
+                    <h2 class="section_subtitle">What you have taught me</h2>
+                    <p class="section_par">
+                        Over the one amazing year I had with you, you taught me a lot about being social with others and gathering an opinion together.
+                        You helped me learn about having a open minded conversation with others and expressing your thoughts while still getting something out of it.
+                        Also you helped me as a person become more of a creative person when it comes to projects and presentations.
+                        Presentations always used to be scary for me and even though we didn't do them as much in your class, I still appreciate every single one we did.
+                    </p>
+                    <p class="section_par">
+                        Python was always easy for me, but what you had taught in your class was a bit of a challenge for me to learn.
+                        It took about 2 class periods but after that I had learned a lot about making graphs and using pure raw data.
+                    </p>
+                    <h2 class="section_subtitle">Keep being you!</h2>
+                    <p class="section_par">
+                        Bucky you were a really fun teacher and person to talk to.
+                        I really strive to be a teacher like you if I ever were one because you make school super fun.
+                        Please keep being an amazing person and teacher.
+                    </p>
+                    <p class="section_par">
+                        You are such a cool dude! :)
+                    </p>
+                    <h3 class="section_signature">- Michael Yurachek</h3>
+                </div>
+            </section>
+            <section class="section_container" id="keppard">
+                <div class="section_banner">
+                    <h1 class="section_title">Katie Eppard</h1>
+                    <hr>
+                    <h2 class="section_subtitle">A little thanks to you!</h2>
+                    <p class="section_par">
+                        Ms Eppard it has been an amazing year for my last high school year.
+                        I worried last year about how boring government would of been, but I was dead wrong.
+                        Even though our class was a bit to silly and loud, you still made the class fun.
+                    </p>
+                    <p class="section_par">
+                        Also with me joining in a teeny bit late on the Pyschology class, I still enjoyed learning from you.
+                        You made learning fun and really interactive.
+                        I really learned a lot from you because of how well you provide information with projects, presentations, and documentaries. 
+                        I appreciate all the lessons you have gave me and truly inspire to be someone like you.
+                    </p>
+                    <h2 class="section_subtitle">What you have taught me</h2>
+                    <p class="section_par">
+                        Over this super long year, you have taught me the importance of being yourself.
+                        You never seem to change for anybody because you are such an outgoing teacher.
+                        Throughout this year you have taught me a lot about not caring what others think about you which is super difficult.
+                    </p>
+                    <p class="section_par">
+                        Also throughout the year you have made me a better student then what I was at the beginning of the year.
+                        You have taught me the importance of being a hard worker and doing the best you can on you work. 
+                    </p>
+                    <h2 class="section_subtitle">Keep being you!</h2>
+                    <p class="section_par">
+                        You have been a really good inpsiration on my life and been such an amazing figure in my life.
+                        I couldn't of had a better senior year if it wasen't for you. 
+                        You are truly an amazing person and you should never change what you do!
+                    </p>
+                    <p class="section_par">
+                        Keep being an amazing teacher! :)
+                    </p>
+                    <h3 class="section_signature">- Michael Yurachek</h3>
                 </div>
             </section>
         </div>
