--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <base href="https://michaelyurachek.com/thankyouteachers/">
         <!-- Basic Meta -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,10 @@
         <meta name="description" content="A little something to thank my amazing high school teachers">
         <meta name="author" content="Michael Yurachek">
         <!-- Favicon -->
-        <link rel="icon" href="/library/image/favicon/FAVICON.png" type="image/png">
+        <link rel="icon" href="library/image/favicon/FAVICON.png" type="image/png">
         <!-- Styles -->
-        <link rel="stylesheet" href="/style/style.css">
-        <script src="/script/script.js"></script>
+        <link rel="stylesheet" href="style/style.css">
+        <script src="script/script.js"></script>
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://michaelyurachek.com/thankyouteachers/">
@@ -40,8 +41,8 @@
                     <input class="login_input" id="loginPassword" type="password" placeholder="SillyPassword101">
                     <button class="login_submit" id="submit" onclick="loginCheck()">Submit</button>
                     <div class="login_links">
-                        <a href="https://michaelyurachek.com"><img class="login_button" src="/library/image/favicon/FAVICON.png"></a>
-                        <a href="https://builtbymichael.io"><img class="login_button" src="/library/image/favicon/moon.png"></a>
+                        <a href="https://michaelyurachek.com"><img class="login_button" src="library/image/favicon/FAVICON.png"></a>
+                        <a href="https://builtbymichael.io"><img class="login_button" src="library/image/favicon/moon.png"></a>
                     </div>
                 </div>
             </section>
